--- a/src/app/sharepage/footer/footer.component.scss
+++ b/src/app/sharepage/footer/footer.component.scss
@@ -10,7 +10,7 @@
 h1
 {
     color: #adacac;
-    font-size: 20px;
+    font-size: 15px;
     font-weight: bold;
 }
 a
@@ -18,7 +18,7 @@ a
     color: #797676;
     text-decoration:none;
     padding: 0px 10px;
-    font-size: 17px;
+    font-size: 14px;
     font-weight: bold;
 }
 a:hover
